--- a/L3/for-loops.ipynb
+++ b/L3/for-loops.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,31 +50,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Helsinki'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Paris'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Barcelona'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Uppsala'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,35 +151,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Riga'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Rome'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Athens'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "european_cities[2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L3\\for-loops.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L3/for-loops.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m european_cities[\u001b[39m3\u001b[39;49m]\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "european_cities[3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,10 +261,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amsterdam\n",
+      "Brussels\n",
+      "Lisbon\n",
+      "Reykjavik\n"
+     ]
+    }
+   ],
+   "source": [
+    "for city in european_cities:\n",
+    "    print(city)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,10 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detroit\n",
+      "Chicago\n",
+      "Denver\n",
+      "Boston\n",
+      "Portland\n",
+      "San Francisco\n",
+      "Houston\n",
+      "Orlando\n"
+     ]
+    }
+   ],
+   "source": [
+    "for city in us_cities:\n",
+    "    print(city)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,17 +413,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rain\n",
+      "sleet\n",
+      "snow\n",
+      "freezing fog\n",
+      "sunny\n",
+      "cloudy\n",
+      "ice pellets\n"
+     ]
+    }
+   ],
+   "source": [
+    "for weather in weather_conditions:\n",
+    "    print(weather)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After the loop, the weather is ice pellets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Last value of for-loop variable remains\n",
+    "print(f\"After the loop, the weather is {weather}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,10 +464,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in range(5):\n",
+    "    print(value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,10 +496,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class range in module builtins:\n",
+      "\n",
+      "class range(object)\n",
+      " |  range(stop) -> range object\n",
+      " |  range(start, stop[, step]) -> range object\n",
+      " |  \n",
+      " |  Return an object that produces a sequence of integers from start (inclusive)\n",
+      " |  to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\n",
+      " |  start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\n",
+      " |  These are exactly the valid indices for a list of 4 elements.\n",
+      " |  When step is given, it specifies the increment (or decrement).\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      True if self else False\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(self, key, /)\n",
+      " |      Return self[key].\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Helper for pickle.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(...)\n",
+      " |      Return a reverse iterator.\n",
+      " |  \n",
+      " |  count(...)\n",
+      " |      rangeobject.count(value) -> integer -- return number of occurrences of value\n",
+      " |  \n",
+      " |  index(...)\n",
+      " |      rangeobject.index(value) -> integer -- return index of value.\n",
+      " |      Raise ValueError if the value is not present.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  start\n",
+      " |  \n",
+      " |  step\n",
+      " |  \n",
+      " |  stop\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(range)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,14 +620,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2,11,3):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,10 +662,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dakar is at index 0 in the list.\n",
+      "Addis Ababa is at index 1 in the list.\n",
+      "Nairobi is at index 2 in the list.\n",
+      "Cairo is at index 3 in the list.\n",
+      "Rabat is at index 4 in the list.\n",
+      "Kampala is at index 5 in the list.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(african_cities)):\n",
+    "    print(f\"{african_cities[i]} is at index {i} in the list.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -407,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,10 +734,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helsinki is the capital of Finland.\n",
+      "Stockholm is the capital of Sweden.\n",
+      "Oslo is the capital of Norway.\n",
+      "Reykjavik is the capital of Iceland.\n",
+      "Copenhagen is the capital of Denmark.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(cities)):\n",
+    "    print(f\"{cities[i]} is the capital of {countries[i]}.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -473,7 +790,13 @@
     ]
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "11\n",
+    "7\n",
+    "11\n",
+    "15\n",
+    "11"
+   ]
   }
  ],
  "metadata": {
@@ -492,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
