--- a/L3/conditional-statements.ipynb
+++ b/L3/conditional-statements.ipynb
@@ -29,14 +29,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17 is not hot!\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 17\n",
     "\n",
     "# If the temperature is greater than 25, print the temperature is hot\n",
-    "# Otherwise, print the temperature is not hot\n"
+    "# Otherwise, print the temperature is not hot\n",
+    "\n",
+    "if temperature > 25:\n",
+    "    print(f\"{temperature} is hot!\")\n",
+    "else:\n",
+    "    print(f\"{temperature} is not hot!\")"
    ]
   },
   {
@@ -66,14 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 is hot!\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = 30\n",
+    "\n",
+    "if temperature > 25:\n",
+    "    print(f\"{temperature} is hot!\")\n",
+    "else:\n",
+    "    print(f\"{temperature} is not hot!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,11 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 is greater than 25!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Try writing an if statement without an else statement\n"
+    "# Try writing an if statement without an else statement\n",
+    "if temperature > 25:\n",
+    "    print(f\"{temperature} is greater than 25!\")"
    ]
   },
   {
@@ -118,14 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wear a raincoat!\n"
+     ]
+    }
+   ],
    "source": [
     "weather = \"rain\"\n",
     "\n",
     "# If the weather is rain, print \"Wear a raincoat!\"\n",
-    "# Otherwise, print \"No raincoat needed.\"\n"
+    "# Otherwise, print \"No raincoat needed.\"\n",
+    "\n",
+    "if weather == 'rain':\n",
+    "    print(f\"Wear a raincoat!\")\n",
+    "else:\n",
+    "    print(f\"No raincoat needed.\")\n"
    ]
   },
   {
@@ -160,14 +211,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wear a raincoat\n",
+      "Wear rain boots\n"
+     ]
+    }
+   ],
+   "source": [
+    "if weather == 'rain':\n",
+    "    print(\"Wear a raincoat\")\n",
+    "    print(\"Wear rain boots\")\n",
+    "else:\n",
+    "    print(\"No raincoat needed\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,17 +267,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperature > 25"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather == 'rain'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,13 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3 is below freezing\n"
+     ]
+    }
+   ],
    "source": [
     "# if temperature is greater than zero, print \"is above freezing\"\n",
     "# else if temperature is exactly zero, print \"is freezing\"\n",
-    "# in all other cases, print \"is below freezing\"\n"
+    "# in all other cases, print \"is below freezing\"\n",
+    "\n",
+    "if temperature > 0:\n",
+    "    print(f\"{temperature} is above freezing\")\n",
+    "elif temperature == 0:\n",
+    "    print(f\"{temperature} is freezing\")\n",
+    "else:\n",
+    "    print(f\"{temperature} is below freezing\")"
    ]
   },
   {
@@ -274,14 +381,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n"
+     ]
+    }
+   ],
+   "source": [
+    "yesterday = 14\n",
+    "today = 10\n",
+    "tomorrow = 13\n",
+    "\n",
+    "if yesterday <= today:\n",
+    "    print(\"A\")\n",
+    "elif today != tomorrow:\n",
+    "    print(\"B\")\n",
+    "elif yesterday > tomorrow:\n",
+    "    print(\"C\")\n",
+    "elif today == today:\n",
+    "    print(\"D\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,23 +427,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At least one part is not true\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an if statement that uses the and keyword with two conditions.\n",
     "# If true, print \"Both parts are true\"\n",
-    "# If false, print \"At least one part is not true\"\n"
+    "# If false, print \"At least one part is not true\"\n",
+    "\n",
+    "a = 0\n",
+    "b = 1\n",
+    "\n",
+    "if a == 0 and a == b:\n",
+    "    print(\"Both parts are true\")\n",
+    "else:\n",
+    "    print(\"At least one part is not true\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At least one part is true\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the if statement above to use the or keyword with two conditions.\n",
-    "# If true, print \"At least one part is true\"\n"
+    "# If true, print \"At least one part is true\"\n",
+    "\n",
+    "if a == 0 or a == b:\n",
+    "    print(\"At least one part is true\")"
    ]
   },
   {
@@ -340,19 +495,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stay at home!\n"
+     ]
+    }
+   ],
    "source": [
     "# Here are the conditions, add your solution below\n",
     "weather = \"rain\"\n",
     "wind_speed = 9\n",
     "\n",
-    "# If it is windy or raining, print \"stay at home\", else print \"go out and enjoy the weather!\"\n"
+    "# If it is windy or raining, print \"stay at home\", else print \"go out and enjoy the weather!\"\n",
+    "if weather == 'rain' or wind_speed > 8:\n",
+    "    print(\"Stay at home!\")\n",
+    "else:\n",
+    "    print(\"Go out and enjoy the weather!\")"
    ]
   },
   {
@@ -373,13 +540,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 is hot\n",
+      "30 is hot\n"
+     ]
+    }
+   ],
    "source": [
     "temperatures = [0, 28, 12, 17, 30]\n",
     "\n",
-    "# For each temperature, if the temperature is greater than 25, print \"..is hot\"\n"
+    "# For each temperature, if the temperature is greater than 25, print \"..is hot\"\n",
+    "for i in range(len(temperatures)):\n",
+    "    if temperatures[i] > 25:\n",
+    "        print(f\"{temperatures[i]} is hot\")"
    ]
   }
  ],
@@ -399,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
