--- a/L3/for-loops.ipynb
+++ b/L3/for-loops.ipynb
@@ -783,19 +783,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "7\n",
+      "11\n",
+      "15\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
-    "11\n",
-    "7\n",
-    "11\n",
-    "15\n",
-    "11"
+    "odd_numbers = [1, 3, 5, 7, 9]\n",
+    "even_numbers = [10, 4, 6, 8, 2]\n",
+    "for i in range(len(odd_numbers)):\n",
+    "    print(odd_numbers[i] + even_numbers[i])"
    ]
   }
  ],
