--- a/L3/conditional-statements.ipynb
+++ b/L3/conditional-statements.ipynb
@@ -540,14 +540,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0 is not hot\n",
       "28 is hot\n",
+      "12 is not hot\n",
+      "17 is not hot\n",
       "30 is hot\n"
      ]
     }
@@ -558,7 +561,9 @@
     "# For each temperature, if the temperature is greater than 25, print \"..is hot\"\n",
     "for i in range(len(temperatures)):\n",
     "    if temperatures[i] > 25:\n",
-    "        print(f\"{temperatures[i]} is hot\")"
+    "        print(f\"{temperatures[i]} is hot\")\n",
+    "    else:\n",
+    "        print(f\"{temperatures[i]} is not hot\")"
    ]
   }
  ],
