Finished Functions notebok

--- a/L4/functions.ipynb
+++ b/L4/functions.ipynb
@@ -50,10 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def celsius_to_fahr(temp):\n",
+    "    return 9/5 * temp + 32"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,17 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "freezing_point = celsius_to_fahr(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The freezing point of water in Fahrenheit is 32.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The freezing point of water in Fahrenheit is {freezing_point}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The boiling point of water in Fahrenheit is 212.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The boiling point of water in Fahrenheit is {celsius_to_fahr(100)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,10 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kelvins_to_celsius(temp_kelvins):\n",
+    "    return temp_kelvins - 273.15"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,17 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "absolute_zero = kelvins_to_celsius(temp_kelvins=0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Absolute zero in Celsius is -273.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Absolute zero in Celsius is {absolute_zero}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -182,7 +222,8 @@
    },
    "outputs": [],
    "source": [
-    "# Enter your code below"
+    "def celsius_to_newton(temp_celsius):\n",
+    "    return temp_celsius * 0.33"
    ]
   },
   {
@@ -198,10 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kelvins_to_fahr(temp_kelvins):\n",
+    "    return celsius_to_fahr(kelvins_to_celsius(temp_kelvins))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,17 +258,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "absolute_zero_fahr = kelvins_to_fahr(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-459.66999999999996\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(absolute_zero_fahr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,10 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kelvins_to_celsius(temp_kelvins):\n",
+    "    temp_celsius = temp_kelvins * -273.15\n",
+    "    return temp_celsius"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,25 +320,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'temp_kelvins' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L4\\functions.ipynb Cell 26\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L4/functions.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m temp_kelvins\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'temp_kelvins' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "temp_kelvins"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'temp_celsius' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L4\\functions.ipynb Cell 27\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L4/functions.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m temp_celsius\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'temp_celsius' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "temp_celsius"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,21 +380,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-80073.92249999999"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kelvins_to_celsius(temp_kelvins=293.15)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'temp_kelvins' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L4\\functions.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L4/functions.ipynb#X41sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m temp_kelvins\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'temp_kelvins' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "temp_kelvins"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,10 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kelvins_to_celsius2(temperature):\n",
+    "    temperature = temperature - 273.15\n",
+    "    return temperature"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,24 +458,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temperature = 303.15"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kelvins_to_celsius2(temperature=temperature)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "303.15"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperature"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -374,17 +521,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def kelvins_to_celsius3(temp):\n",
+    "    temp = temperature - 273.15\n",
+    "    return temp"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kelvins_to_celsius3(273.15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -415,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
