Finished Script Files notebook

--- a/L4/script-files.ipynb
+++ b/L4/script-files.ipynb
@@ -120,11 +120,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5f2a9933-5eb5-445d-bf29-13cdbbe4dca9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive D is Data\n",
+      " Volume Serial Number is C679-9AA3\n",
+      "\n",
+      " Directory of d:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L4\n",
+      "\n",
+      "11/24/2023  10:29 PM    <DIR>          .\n",
+      "11/24/2023  10:29 PM    <DIR>          ..\n",
+      "11/24/2023  10:08 PM            21,234 functions.ipynb\n",
+      "11/19/2023  02:14 PM            12,262 gcp-4-writing-scripts.ipynb\n",
+      "11/19/2023  02:14 PM    <DIR>          img\n",
+      "11/19/2023  02:14 PM            12,859 modules.ipynb\n",
+      "11/19/2023  02:14 PM            18,575 script-files.ipynb\n",
+      "11/24/2023  10:31 PM               309 temp_converter.py\n",
+      "11/19/2023  02:14 PM            20,363 use-of-ai.ipynb\n",
+      "               6 File(s)         85,602 bytes\n",
+      "               3 Dir(s)  147,017,777,152 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,11 +209,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4d47d115-1df7-443a-ab65-73a44176fe42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive D is Data\n",
+      " Volume Serial Number is C679-9AA3\n",
+      "\n",
+      " Directory of d:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L4\n",
+      "\n",
+      "11/24/2023  10:29 PM    <DIR>          .\n",
+      "11/24/2023  10:29 PM    <DIR>          ..\n",
+      "11/24/2023  10:08 PM            21,234 functions.ipynb\n",
+      "11/19/2023  02:14 PM            12,262 gcp-4-writing-scripts.ipynb\n",
+      "11/19/2023  02:14 PM    <DIR>          img\n",
+      "11/19/2023  02:14 PM            12,859 modules.ipynb\n",
+      "11/19/2023  02:14 PM            18,575 script-files.ipynb\n",
+      "11/24/2023  10:31 PM               309 temp_converter.py\n",
+      "11/19/2023  02:14 PM            20,363 use-of-ai.ipynb\n",
+      "               6 File(s)         85,602 bytes\n",
+      "               3 Dir(s)  147,017,777,152 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,13 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "733f8cab-1487-4f15-b34f-8ef79e349bc1",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from temp_converter import celsius_to_fahr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,11 +274,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1e4e9167-ce98-4691-a8d0-8fa830f50061",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The freezing point of water in Fahrenheit is 32.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The freezing point of water in Fahrenheit is {celsius_to_fahr(0)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,13 +316,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9ba2fe48-154a-471a-a9ab-8e5ef8f29a34",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import temp_converter as tc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,33 +336,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13089f9a-25c4-4b19-9890-333876e1d538",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.celsius_to_fahr(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3f147b43-556b-40f6-92de-f1a77f4b423f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-273.15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.kelvins_to_celsius(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5d8f8076-d93e-430a-81ce-238266390646",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-459.66999999999996"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.kelvins_to_fahr(0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,13 +506,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "02ba856d-0ad1-4faa-8ba8-d54f942a424f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function temp_calculator in module temp_converter:\n",
+      "\n",
+      "temp_calculator(temp_k, convert_to)\n",
+      "    Function for converting temperature in Kelvins \n",
+      "    to Celsius or Fahrenheit.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    temp_k: <numerical>\n",
+      "        Temperature in Kelvins\n",
+      "    convert_to: <str>\n",
+      "        Target temperature that can be either\n",
+      "        Celsius ('C') or Fahrenheit ('F').\n",
+      "        Supported values: 'C' | 'F'\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    <float>\n",
+      "        Converted temperature.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(tc.temp_calculator)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -423,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "59dc6f0d-1c37-44dd-b73a-98abe96fd21d",
    "metadata": {},
    "outputs": [],
@@ -433,23 +565,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "84459e98-85ef-42eb-bccd-c859bccf9b51",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "temperature_c = tc.temp_calculator(temp_k=temp_kelvin, convert_to='C')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6fa376bf-5659-4364-9c1c-fa1fdc16e516",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature 30 in Kelvins is -243.14999999999998 in Celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Temperature {temp_kelvin} in Kelvins is {temperature_c} in Celsius\")"
+   ]
   }
  ],
  "metadata": {
@@ -468,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
