--- a/L6/advanced-data-processing-with-pandas.ipynb
+++ b/L6/advanced-data-processing-with-pandas.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,24 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define absolute path to the file\n",
-    "fp = r\"D:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\data\\029440.txt\""
+    "fp = r\"D:\\WORK\\ONLINE COURSES\\GEOPYTHON\\data\\029440.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kurt\\AppData\\Local\\Temp\\ipykernel_4332\\2870290479.py:3: DtypeWarning: Columns (29,30,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Kurt\\AppData\\Local\\Temp\\ipykernel_1064\\2870290479.py:3: DtypeWarning: Columns (29,30,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(\n"
      ]
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -428,7 +428,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "4  29440  190601021300  270.0  7.0  NaN  27.0  NaN  NaN"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "Index(['USAF', 'YR--MODAHRMN', 'DIR', 'SPD', 'GUS', 'TEMP', 'MAX', 'MIN'], dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -642,7 +642,7 @@
        "{'YR--MODAHRMN': 'TIME', 'SPD': 'SPEED', 'GUS': 'GUST'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "dict"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -836,7 +836,7 @@
        "4           29440  190601021300  270.0    7.0   NaN    27.0  NaN  NaN"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "(757983, 8)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
        "4           29440  190601021300  270.0    7.0   NaN    27.0  NaN  NaN"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
        "757982           29440  201910012350  110.0    3.0   NaN    37.0  NaN  NaN"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1316,7 +1316,7 @@
        "max      108.000000      91.000000     91.000000     81.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        "0.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
        "4           29440  190601021300  270.0    7.0   NaN    27.0  NaN  NaN"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
        "4 -2.777778  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
        "Name: TEMP_F, Length: 757983, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
        "[757983 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2129,7 +2129,7 @@
        "4 -2.777778    NaN    NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
        "Name: TIME, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2208,7 @@
        "Name: TIME, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2283,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
        "'201910'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2451,7 @@
        "4 -2.777778    NaN    NaN  190601021300     190601  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2482,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -2497,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,7 @@
        "4 -2.777778    NaN    NaN  190601021300     190601    01  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2664,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2674,7 +2674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2688,7 +2688,7 @@
        "Name: DATE, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2716,7 +2716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2736,7 @@
        "Name: DATE, Length: 757983, dtype: int32"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2747,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2767,7 +2767,7 @@
        "Name: DATE, Length: 757983, dtype: int32"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2794,7 +2794,7 @@
        "51"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2829,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2849,7 +2849,7 @@
        "Name: YEAR_MONTH_DT, Length: 757983, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
