Finished Errors notebook

--- a/L6/errors.ipynb
+++ b/L6/errors.ipynb
@@ -45,10 +45,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 4) (2231829726.py, line 4)",
+     "evalue": "unterminated f-string literal (detected at line 4) (2231829726.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f\"A wind speed of {wind_speed_km} km/hr is {wind_speed_ms} m/s.)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"A wind speed of {wind_speed_km} km/hr is {wind_speed_ms} m/s.)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated f-string literal (detected at line 4)\n"
      ]
     }
    ],
@@ -89,11 +89,11 @@
      "evalue": "unsupported operand type(s) for /: 'str' and 'int'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m speed \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1000\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m3600\u001b[39m\n\u001b[1;32m      4\u001b[0m wind_speed_km \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m30\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m wind_speed_ms \u001b[38;5;241m=\u001b[39m \u001b[43mconvert_wind_speed\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwind_speed_km\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA wind speed of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwind_speed_km\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m km/hr is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwind_speed_ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m m/s.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m, in \u001b[0;36mconvert_wind_speed\u001b[0;34m(speed)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert_wind_speed\u001b[39m(speed):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mspeed\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3600\u001b[39;49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'int'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\errors.ipynb Cell 5\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/errors.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3600\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/errors.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m wind_speed_km \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m30\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/errors.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m wind_speed_ms \u001b[39m=\u001b[39m convert_wind_speed(wind_speed_km)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/errors.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mA wind speed of \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_km\u001b[39m}\u001b[39;00m\u001b[39m km/hr is \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_ms\u001b[39m}\u001b[39;00m\u001b[39m m/s.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\errors.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/errors.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_wind_speed\u001b[39m(speed):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/errors.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39;49m \u001b[39m1000\u001b[39;49m \u001b[39m/\u001b[39;49m \u001b[39m3600\u001b[39;49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'int'"
      ]
     }
    ],
@@ -357,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
