Started on Advanced Plotting notebook

--- a/L7/advanced-plotting.ipynb
+++ b/L7/advanced-plotting.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define absolute path to the file\n",
-    "fp = r\"/home/jovyan/shared/data/L6/029740.txt\""
+    "fp = r\"D:\\WORK\\ONLINE COURSES\\GEOPYTHON\\data\\029740.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,10 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 931767\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of rows: {len(data)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +116,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TEMP</th>\n",
+       "      <th>MAX</th>\n",
+       "      <th>MIN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YR--MODAHRMN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 00:00:00</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 06:00:00</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 12:00:00</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 18:00:00</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-02 00:00:00</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     TEMP   MAX   MIN\n",
+       "YR--MODAHRMN                         \n",
+       "1952-01-01 00:00:00  36.0   NaN   NaN\n",
+       "1952-01-01 06:00:00  37.0   NaN  34.0\n",
+       "1952-01-01 12:00:00  39.0   NaN   NaN\n",
+       "1952-01-01 18:00:00  36.0  39.0   NaN\n",
+       "1952-01-02 00:00:00  36.0   NaN   NaN"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,10 +231,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TEMP_F</th>\n",
+       "      <th>MAX</th>\n",
+       "      <th>MIN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YR--MODAHRMN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 00:00:00</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 06:00:00</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 12:00:00</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-01 18:00:00</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952-01-02 00:00:00</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     TEMP_F   MAX   MIN\n",
+       "YR--MODAHRMN                           \n",
+       "1952-01-01 00:00:00    36.0   NaN   NaN\n",
+       "1952-01-01 06:00:00    37.0   NaN  34.0\n",
+       "1952-01-01 12:00:00    39.0   NaN   NaN\n",
+       "1952-01-01 18:00:00    36.0  39.0   NaN\n",
+       "1952-01-02 00:00:00    36.0   NaN   NaN"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,10 +331,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of no data values per column:\n",
+      "TEMP_F      3579\n",
+      "MAX       900880\n",
+      "MIN       900896\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of no data values per column:\\n{data.isna().sum()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,17 +361,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.dropna(subset=['TEMP_F'], inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows after removing no data values: 928188\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of rows after removing no data values: {len(data)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "hide-cell"
@@ -208,16 +412,26 @@
    "outputs": [],
    "source": [
     "# Calculate the number of rows after removing all no data values\n",
-    "# NOTE: Do not apply .dropna() with the \"inplace\" parameter!\n"
+    "# NOTE: Do not apply .dropna() with the \"inplace\" parameter!\n",
+    "test_drop = data.dropna()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows after removing NaNs from all columns: 20433\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate the number of rows without removing the no data values\n"
+    "# Calculate the number of rows without removing the no data values\n",
+    "print(f\"Number of rows after removing NaNs from all columns: {len(test_drop)}\")\n"
    ]
   },
   {
@@ -658,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
